like_rubyParser.py
# Generated from like_ruby.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class like_rubyParser ( Parser ):

    grammarFileName = "like_ruby.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Integer'", "'Float'", "'String'", "<INVALID>", 
                     "<INVALID>", "','", "';'", "<INVALID>", "'require'", 
                     "'end'", "'def'", "'return'", "'pir'", "'if'", "'else'", 
                     "'elsif'", "'unless'", "'while'", "'retry'", "'break'", 
                     "'for'", "'true'", "'false'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'**'", "'=='", "'!='", "'>'", "'<'", 
                     "'<='", "'>='", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'**='", "'&'", "'|'", "'^'", "'~'", "'<<'", 
                     "'>>'", "<INVALID>", "<INVALID>", "<INVALID>", "'('", 
                     "')'", "'['", "']'", "'nil'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Table'", "'Row'", "'Column'", "<INVALID>", "<INVALID>", 
                     "'Table.new'", "'Column.new'", "'Row.new'" ]

    symbolicNames = [ "<INVALID>", "INT_TYPE", "FLOAT_TYPE", "STRING_TYPE", 
                      "TYPE", "LITERAL", "COMMA", "SEMICOLON", "CRLF", "REQUIRE", 
                      "END", "DEF", "RETURN", "PIR", "IF", "ELSE", "ELSIF", 
                      "UNLESS", "WHILE", "RETRY", "BREAK", "FOR", "TRUE", 
                      "FALSE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EXP", 
                      "EQUAL", "NOT_EQUAL", "GREATER", "LESS", "LESS_EQUAL", 
                      "GREATER_EQUAL", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "EXP_ASSIGN", 
                      "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "BIT_SHL", 
                      "BIT_SHR", "AND", "OR", "NOT", "LEFT_RBRACKET", "RIGHT_RBRACKET", 
                      "LEFT_SBRACKET", "RIGHT_SBRACKET", "NIL", "SL_COMMENT", 
                      "ML_COMMENT", "WS", "INT", "FLOAT", "ID", "TABLE_TYPE", 
                      "ROW_TYPE", "COLUMN_TYPE", "ID_GLOBAL", "ID_FUNCTION", 
                      "TABLE_NEW", "COLUMN_NEW", "ROW_NEW" ]

    RULE_prog = 0
    RULE_function_definition_list = 1
    RULE_expression_list = 2
    RULE_expression = 3
    RULE_global_get = 4
    RULE_global_set = 5
    RULE_global_result = 6
    RULE_function_inline_call = 7
    RULE_require_block = 8
    RULE_pir_inline = 9
    RULE_pir_expression_list = 10
    RULE_function_definition = 11
    RULE_function_definition_body = 12
    RULE_function_definition_header = 13
    RULE_function_name = 14
    RULE_function_definition_params = 15
    RULE_function_definition_params_list = 16
    RULE_function_definition_param_id = 17
    RULE_return_statement = 18
    RULE_function_call = 19
    RULE_function_call_param_list = 20
    RULE_function_call_params = 21
    RULE_function_param = 22
    RULE_function_unnamed_param = 23
    RULE_function_named_param = 24
    RULE_function_call_assignment = 25
    RULE_all_result = 26
    RULE_elsif_statement = 27
    RULE_if_elsif_statement = 28
    RULE_if_statement = 29
    RULE_unless_statement = 30
    RULE_while_statement = 31
    RULE_for_statement = 32
    RULE_init_expression = 33
    RULE_all_assignment = 34
    RULE_for_init_list = 35
    RULE_cond_expression = 36
    RULE_loop_expression = 37
    RULE_for_loop_list = 38
    RULE_statement_body = 39
    RULE_statement_expression_list = 40
    RULE_dynamic_assignment = 41
    RULE_int_assignment = 42
    RULE_float_assignment = 43
    RULE_string_assignment = 44
    RULE_table_assignment = 45
    RULE_column_assignment = 46
    RULE_row_assignment = 47
    RULE_assignment = 48
    RULE_initial_array_assignment = 49
    RULE_array_assignment = 50
    RULE_array_definition = 51
    RULE_array_definition_elements = 52
    RULE_array_selector = 53
    RULE_dynamic_result = 54
    RULE_dynamic = 55
    RULE_int_result = 56
    RULE_float_result = 57
    RULE_string_result = 58
    RULE_table_result = 59
    RULE_column_result = 60
    RULE_row_result = 61
    RULE_comparison_list = 62
    RULE_comparison = 63
    RULE_comp_var = 64
    RULE_lvalue = 65
    RULE_rvalue = 66
    RULE_break_expression = 67
    RULE_literal_t = 68
    RULE_float_t = 69
    RULE_int_t = 70
    RULE_bool_t = 71
    RULE_nil_t = 72
    RULE_my_id = 73
    RULE_id_global = 74
    RULE_id_function = 75
    RULE_terminator = 76
    RULE_else_token = 77
    RULE_crlf = 78

    ruleNames =  [ "prog", "function_definition_list", "expression_list", 
                   "expression", "global_get", "global_set", "global_result", 
                   "function_inline_call", "require_block", "pir_inline", 
                   "pir_expression_list", "function_definition", "function_definition_body", 
                   "function_definition_header", "function_name", "function_definition_params", 
                   "function_definition_params_list", "function_definition_param_id", 
                   "return_statement", "function_call", "function_call_param_list", 
                   "function_call_params", "function_param", "function_unnamed_param", 
                   "function_named_param", "function_call_assignment", "all_result", 
                   "elsif_statement", "if_elsif_statement", "if_statement", 
                   "unless_statement", "while_statement", "for_statement", 
                   "init_expression", "all_assignment", "for_init_list", 
                   "cond_expression", "loop_expression", "for_loop_list", 
                   "statement_body", "statement_expression_list", "dynamic_assignment", 
                   "int_assignment", "float_assignment", "string_assignment", 
                   "table_assignment", "column_assignment", "row_assignment", 
                   "assignment", "initial_array_assignment", "array_assignment", 
                   "array_definition", "array_definition_elements", "array_selector", 
                   "dynamic_result", "dynamic", "int_result", "float_result", 
                   "string_result", "table_result", "column_result", "row_result", 
                   "comparison_list", "comparison", "comp_var", "lvalue", 
                   "rvalue", "break_expression", "literal_t", "float_t", 
                   "int_t", "bool_t", "nil_t", "my_id", "id_global", "id_function", 
                   "terminator", "else_token", "crlf" ]

    EOF = Token.EOF
    INT_TYPE=1
    FLOAT_TYPE=2
    STRING_TYPE=3
    TYPE=4
    LITERAL=5
    COMMA=6
    SEMICOLON=7
    CRLF=8
    REQUIRE=9
    END=10
    DEF=11
    RETURN=12
    PIR=13
    IF=14
    ELSE=15
    ELSIF=16
    UNLESS=17
    WHILE=18
    RETRY=19
    BREAK=20
    FOR=21
    TRUE=22
    FALSE=23
    PLUS=24
    MINUS=25
    MUL=26
    DIV=27
    MOD=28
    EXP=29
    EQUAL=30
    NOT_EQUAL=31
    GREATER=32
    LESS=33
    LESS_EQUAL=34
    GREATER_EQUAL=35
    ASSIGN=36
    PLUS_ASSIGN=37
    MINUS_ASSIGN=38
    MUL_ASSIGN=39
    DIV_ASSIGN=40
    MOD_ASSIGN=41
    EXP_ASSIGN=42
    BIT_AND=43
    BIT_OR=44
    BIT_XOR=45
    BIT_NOT=46
    BIT_SHL=47
    BIT_SHR=48
    AND=49
    OR=50
    NOT=51
    LEFT_RBRACKET=52
    RIGHT_RBRACKET=53
    LEFT_SBRACKET=54
    RIGHT_SBRACKET=55
    NIL=56
    SL_COMMENT=57
    ML_COMMENT=58
    WS=59
    INT=60
    FLOAT=61
    ID=62
    TABLE_TYPE=63
    ROW_TYPE=64
    COLUMN_TYPE=65
    ID_GLOBAL=66
    ID_FUNCTION=67
    TABLE_NEW=68
    COLUMN_NEW=69
    ROW_NEW=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_list(self):
            return self.getTypedRuleContext(like_rubyParser.Expression_listContext,0)


        def function_definition_list(self):
            return self.getTypedRuleContext(like_rubyParser.Function_definition_listContext,0)


        def getRuleIndex(self):
            return like_rubyParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = like_rubyParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 158
                self.function_definition_list(0)


            self.state = 161
            self.expression_list(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_definition_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_definition_header(self):
            return self.getTypedRuleContext(like_rubyParser.Function_definition_headerContext,0)


        def terminator(self):
            return self.getTypedRuleContext(like_rubyParser.TerminatorContext,0)


        def function_definition_list(self):
            return self.getTypedRuleContext(like_rubyParser.Function_definition_listContext,0)


        def getRuleIndex(self):
            return like_rubyParser.RULE_function_definition_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition_list" ):
                listener.enterFunction_definition_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition_list" ):
                listener.exitFunction_definition_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition_list" ):
                return visitor.visitFunction_definition_list(self)
            else:
                return visitor.visitChildren(self)



    def function_definition_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = like_rubyParser.Function_definition_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_function_definition_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [like_rubyParser.DEF]:
                self.state = 164
                self.function_definition_header()
                pass
            elif token in [like_rubyParser.SEMICOLON, like_rubyParser.CRLF]:
                self.state = 165
                self.terminator(0)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = like_rubyParser.Function_definition_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_function_definition_list)
                    self.state = 168
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 169
                    self.function_definition_header()
                    self.state = 170
                    self.terminator(0) 
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(like_rubyParser.ExpressionContext,0)


        def terminator(self):
            return self.getTypedRuleContext(like_rubyParser.TerminatorContext,0)


        def expression_list(self):
            return self.getTypedRuleContext(like_rubyParser.Expression_listContext,0)


        def getRuleIndex(self):
            return like_rubyParser.RULE_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_list" ):
                listener.enterExpression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_list" ):
                listener.exitExpression_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_list" ):
                return visitor.visitExpression_list(self)
            else:
                return visitor.visitChildren(self)



    def expression_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = like_rubyParser.Expression_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [like_rubyParser.INT_TYPE, like_rubyParser.FLOAT_TYPE, like_rubyParser.STRING_TYPE, like_rubyParser.LITERAL, like_rubyParser.REQUIRE, like_rubyParser.DEF, like_rubyParser.RETURN, like_rubyParser.PIR, like_rubyParser.IF, like_rubyParser.UNLESS, like_rubyParser.WHILE, like_rubyParser.FOR, like_rubyParser.TRUE, like_rubyParser.FALSE, like_rubyParser.BIT_NOT, like_rubyParser.NOT, like_rubyParser.LEFT_RBRACKET, like_rubyParser.NIL, like_rubyParser.INT, like_rubyParser.FLOAT, like_rubyParser.ID, like_rubyParser.TABLE_TYPE, like_rubyParser.ROW_TYPE, like_rubyParser.COLUMN_TYPE, like_rubyParser.ID_GLOBAL, like_rubyParser.ID_FUNCTION]:
                self.state = 178
                self.expression()
                self.state = 179
                self.terminator(0)
                pass
            elif token in [like_rubyParser.SEMICOLON, like_rubyParser.CRLF]:
                self.state = 181
                self.terminator(0)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 190
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = like_rubyParser.Expression_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_list)
                    self.state = 184
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 185
                    self.expression()
                    self.state = 186
                    self.terminator(0) 
                self.state = 192
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_definition(self):
            return self.getTypedRuleContext(like_rubyParser.Function_definitionContext,0)


        def function_inline_call(self):
            return self.getTypedRuleContext(like_rubyParser.Function_inline_callContext,0)


        def require_block(self):
            return self.getTypedRuleContext(like_rubyParser.Require_blockContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(like_rubyParser.If_statementContext,0)


        def unless_statement(self):
            return self.getTypedRuleContext(like_rubyParser.Unless_statementContext,0)


        def rvalue(self):
            return self.getTypedRuleContext(like_rubyParser.RvalueContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(like_rubyParser.Return_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(like_rubyParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(like_rubyParser.For_statementContext,0)


        def pir_inline(self):
            return self.getTypedRuleContext(like_rubyParser.Pir_inlineContext,0)


        def getRuleIndex(self):
            return like_rubyParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = like_rubyParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression)
        try:
            self.state = 203
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.function_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.function_inline_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 195
                self.require_block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 196
                self.if_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 197
                self.unless_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 198
                self.rvalue(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 199
                self.return_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 200
                self.while_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 201
                self.for_statement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 202
                self.pir_inline()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Global_getContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var_name = None # LvalueContext
            self.op = None # Token
            self.global_name = None # Id_globalContext
